<resources>
    <string name="app_name">Mobro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_packages">Packages</string>
    <string name="email_word">Email</string>
    <string name="phone_no_word">Phone Number</string>
    <string name="title_activity_invite">Invite</string>
    <string name="friend_phone_prompt">Add friends</string>
    <string name="title_activity_payment">Payment</string>
    <string name="user_name">Username</string>
    <string name="user_email">User email</string>
    <string name="title_activity_success">Success</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="invite_word">Invite</string>
    <string name="password_word">Password</string>
    <string name="login_word">Login</string>
    <string name="forgot_word">Forgot Password?</string>
    <string name="register_word">Register</string>
    <string name="make_payment_word">Make Payment</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="choose_topup_word">Choose a Top up</string>
    <string name="amount_word">Amount</string>
    <string name="confirm_word">Confirm</string>
    <string name="add_friend_word">Add Friend</string>
    <string name="confirm_password_word">Confirm Password</string>
    <string name="title_activity_forgot">forgot</string>
    <string name="title_activity_settings">Settings</string>

    <string name="currency">₹</string>

    <string name="registerlink">http://mobro.in/login/register.php</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
