<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mobile.mobro.Login"
    android:background="@drawable/login_travel"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical" >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/phone_no_word"
        android:id="@+id/phone_number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:maxLength="10"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_word"
        android:id="@+id/password_field"
        android:layout_below="@+id/phone_number"
        android:layout_alignLeft="@+id/phone_number"
        android:layout_alignStart="@+id/phone_number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_word"
        android:id="@+id/button3"
        android:layout_below="@+id/password_field"
        android:layout_marginTop="70dp"
        android:onClick="Login_button"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:background="#46a6ff"
        android:minWidth="66dp"

        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_word"
        android:id="@+id/button5"
        android:onClick="forgotPassword"
        android:background="#46a6ff"
        android:minWidth="66dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="44dp"
        android:layout_alignParentBottom="true"
        android:padding="14dip"

        android:layout_centerHorizontal="true"  />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>